All images now added!

--- a/public/character-art.html
+++ b/public/character-art.html
@@ -50,6 +50,7 @@
             <img src="../assets/images/art-images/characters/Rudolph.jpg" alt="An illustration of a scary reindeer eating Christmas lights with spooky elves peeking in through the windows.">
             <img src="../assets/images/art-images/characters/Spook-phantasm-kiss.jpg" alt="An illustration of an elephant / dragon-like creature kissing a black dog character. The words, 'You really don't know how to kiss' are in the background because the creature has the dog's whole muzzle in its mouth.">
             <img src="../assets/images/art-images/characters/Spook-werewolf.jpg" alt="An illustration of a black dog werewolf snarling with a red background.">
+            <img src="../assets/images/art-images/characters/Game-art.PNG" alt="An illustration of a woman standing under a maple tree wearing a straw hat.">
         </div>
 
         <!-- Footer -->
