Some experimenting done with designing the on-hover crediting feature.

--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
         <!-- Footer -->
         <footer>
             <p>©2024 All rights reserved. Every illustration shown on this page is the property of Nathan Ki aka ghost.with.a.pulse.</p>
-            <p>Instagram & Twitter icons designed by <a href="www.freepik.com"><span class="freepik-link">Freepik</span></a> and used under a free licence.</p>
+            <p>Instagram, Twitter & Telegram icons designed by <a href="www.freepik.com"><span class="freepik-link">Freepik</span></a> and used under a free licence.</p>
             <div class="social-icons-box">
                 <a href="https://www.instagram.com/ghost.with.a.pulse"><img src="./assets/images/downloaded-icons/instagram-icon.png" alt="The Instagram icon (click to go to my Instagram page)."></a>
                 <a href="https://x.com/PulseWithAGhost"><img src="./assets/images/downloaded-icons/twitter-icon.png" alt="The old Twitter / X icon (click to go to my Twitter page)."></a>
+                <a href="https://t.me/GhostWithAPulse"><img src="./assets/images/downloaded-icons/telegram-icon.png" alt="The Telegram icon (click to go to my Telegram page)."></a>
             </div>
         </footer>
     </div>
