--- a/public/backgrounds.html
+++ b/public/backgrounds.html
@@ -49,14 +49,25 @@
             <img src="../assets/images/art-images/backgrounds/Title-page.jpg" alt="An illustration of a surreal playroom with two slides and the words 'I Made You a Happy World' in the middle.">
         </div>
 
+        <!-- Text Pop-Up -->
+        <div class="pop-up-box">
+            <p id="ref-giraffe">
+                A reference sheet for a pastel-themed giraffe character which is currently for sale for US$45 or NZ$60. Feel free to reach out using any of the social media links listed in the footer if you are interested!
+            </p>
+            <p id="ref-hedgehog">
+                A reference sheet for a goth-themed hedgehog character sold to Obsidian / Alyss!
+            </p>
+        </div>
+
         <!-- Footer -->
         <footer>
             <p>©2024 All rights reserved. Every illustration shown on this page was made by Nathan Ki aka ghost.with.a.pulse.</p>
             <p>However, many backgrounds were made for indie games which are joint-owned collaborations. Hover over each image to view ownership details.</p>
-            <p>Instagram & Twitter icons designed by <a href="www.freepik.com"><span class="freepik-link">Freepik</span></a> and used under a free licence.</p>
+            <p>Instagram, Twitter & Telegram icons designed by <a href="www.freepik.com"><span class="freepik-link">Freepik</span></a> and used under a free licence.</p>
             <div class="social-icons-box">
                 <a href="https://www.instagram.com/ghost.with.a.pulse"><img src="../assets/images/downloaded-icons/instagram-icon.png" alt="The Instagram icon (click to go to my Instagram page)."></a>
                 <a href="https://x.com/PulseWithAGhost"><img src="../assets/images/downloaded-icons/twitter-icon.png" alt="The old Twitter / X icon (click to go to my Twitter page)."></a>
+                <a href="https://t.me/GhostWithAPulse"><img src="../assets/images/downloaded-icons/telegram-icon.png" alt="The Telegram icon (click to go to my Telegram page)."></a>
             </div>
         </footer>
     </div>
