--- a/public/character-art.html
+++ b/public/character-art.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- External files -->
     <link rel="stylesheet" href="../styles.css"/>
+    <script src="./script.js"></script>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -58,6 +61,7 @@
             <p>©2024 All rights reserved. Every illustration shown on this page was made by Nathan Ki aka ghost.with.a.pulse.</p>
             <p>However, not all characters shown belong to the artist. Hover over each image to view ownership details.</p>
             <p>Instagram, Twitter & Telegram icons designed by <a href="www.freepik.com"><span class="freepik-link">Freepik</span></a> and used under a free licence.</p>
+            <p>X button (for pop-ups) designed by <a href="https://www.freepik.com/author/pixelverse"><span class="freepik-link">@PixelVerse</span></a> and used under a free licence.</p>
             <div class="social-icons-box">
                 <a href="https://www.instagram.com/ghost.with.a.pulse"><img src="../assets/images/downloaded-icons/instagram-icon.png" alt="The Instagram icon (click to go to my Instagram page)."></a>
                 <a href="https://x.com/PulseWithAGhost"><img src="../assets/images/downloaded-icons/twitter-icon.png" alt="The old Twitter / X icon (click to go to my Twitter page)."></a>
