Made all the pop-ups work on the backgrounds page, and made two of the backgrounds change version on hover.

--- a/public/backgrounds.html
+++ b/public/backgrounds.html
@@ -24,32 +24,32 @@
         <div class="text-box">
             <a href="../index.html"><h1><span class="username">@ghost.with.a.pulse</span> Online Art Portfolio</h1></a>
             <h2>Backgrounds</h2>
-            <p>Tip: Hover over the images below to find out more about each piece.</p>
+            <p>Tip: Click on the images below to find out more about each piece.</p>
         </div>
 
         <!-- The Art -->
         <div class="art-box" id="backgrounds-art-box">
-            <img src="../assets/images/art-images/backgrounds/Classroom.jpg" alt="An illustration of a primary school classroom." onclick="popUp('backg', 1)">
-            <img src="../assets/images/art-images/backgrounds/Bathroom.jpg" alt="An illustration of a dirty bathroom." onclick="popUp('backg', 2)">
-            <img src="../assets/images/art-images/backgrounds/Beach-room.jpg" alt="An illustration of a sea themed playroom." onclick="popUp('backg', 3)">
-            <img src="../assets/images/art-images/backgrounds/Bear-room.jpg" alt="An illustration of a play room with two tunnels. One is locked shut." onclick="popUp('backg', 4)">
-            <img src="../assets/images/art-images/backgrounds/Bedroom.jpg" alt="An illustration of a messy bedroom. 'We are the disease' is written on the wall." onclick="popUp('backg', 5)">
-            <img src="../assets/images/art-images/backgrounds/Cleaning-room.jpg" id="decontam" alt="An illustration of a decontamination room with a view into an abandoned lab." onclick="popUp('backg', 6)" onmouseenter="changeVersion('Decontamination')" onmouseleave="changeVersionBack('Decontamination')">
-            <img src="../assets/images/art-images/backgrounds/Stairs-1.jpg" alt="An illustration of a staircase leading down into a dark hallway." onclick="popUp('backg', 7)">
-            <img src="../assets/images/art-images/backgrounds/Hallway-2.jpg" alt="An illustration of the end of a hallway. Newspapers cover up a window on one side." onclick="popUp('backg', 8)">
-            <img src="../assets/images/art-images/backgrounds/Hallway-3.jpg" alt="An illustration of a sterile-looking hallway with a note on the floor (not readable)." onclick="popUp('backg', 9)">
-            <img src="../assets/images/art-images/backgrounds/hallway-with-key.jpg" alt="An illustration of a hallway with a lantern attached to the wall and sand on the floor." onclick="popUp('backg', 10)">
-            <img src="../assets/images/art-images/backgrounds/Kitchen.jpg" alt="An illustration of a dirty abandoned kitchen." onclick="popUp('backg', 11)">
-            <img src="../assets/images/art-images/backgrounds/Lab-1.jpg" alt="An illustration of a tidy laboratory." onclick="popUp('backg', 12)">
-            <img src="../assets/images/art-images/backgrounds/Lab-2.jpg" alt="An illustration of a messy overgrown laboratory" onclick="popUp('backg', 13)">
-            <img src="../assets/images/art-images/backgrounds/Lab-stairwell.jpg" alt="An illustration of a stairwell with some heavy doors at the bottom slightly opened to reveal a pitch dark room." onclick="popUp('backg', 14)">
-            <img src="../assets/images/art-images/backgrounds/Managers-office.jpg" alt="An illustration of an office with a dead man in a chair, with strange plants releasing spores around him." onclick="popUp('backg', 15)">
-            <img src="../assets/images/art-images/backgrounds/Mirror-room.jpg" alt="An illustration of a room full of mirrors, a spiral staircase leading down through the floor and a note on the carpet (unreadable)." onclick="popUp('backg', 16)">
-            <img src="../assets/images/art-images/backgrounds/Notice-board.jpg" alt="An illustration of a notice board with notes on it e.g. 'Who keeps making the weird salad? -Tom'" onclick="popUp('backg', 17)">
-            <img src="../assets/images/art-images/backgrounds/Outside.jpg" alt="An illustration of the end of a slide leading out into a field with the words 'You escaped!!' above it." onclick="popUp('backg', 18)">
-            <img src="../assets/images/art-images/backgrounds/phantasm-room.jpg" alt="An illustration of a playroom with a spiral staircase, a swing and a ball pit in it." onclick="popUp('backg', 19)">
-            <img src="../assets/images/art-images/backgrounds/Storage-room.jpg" alt="An illustration of a storage room full of old furniture, some books, a roll of tape etc." onclick="popUp('backg', 20)">
-            <img src="../assets/images/art-images/backgrounds/Title-page.jpg" alt="An illustration of a surreal playroom with two slides and the words 'I Made You a Happy World' in the middle." onclick="popUp('backg', 21)">
+            <img src="../assets/images/art-images/backgrounds/Classroom.jpg" alt="An illustration of a primary school classroom." onclick="popUp('background', 1)">
+            <img src="../assets/images/art-images/backgrounds/Bathroom.jpg" alt="An illustration of a dirty bathroom." onclick="popUp('background', 2)">
+            <img src="../assets/images/art-images/backgrounds/Beach-room.jpg" alt="An illustration of a sea themed playroom." onclick="popUp('background', 3)">
+            <img src="../assets/images/art-images/backgrounds/Bear-room.jpg" alt="An illustration of a play room with two tunnels. One is locked shut." onclick="popUp('background', 4)">
+            <img src="../assets/images/art-images/backgrounds/Bedroom.jpg" alt="An illustration of a messy bedroom. 'We are the disease' is written on the wall." onclick="popUp('background', 5)">
+            <img src="../assets/images/art-images/backgrounds/Cleaning-room.jpg" id="decontam" alt="An illustration of a decontamination room with a view into an abandoned lab." onclick="popUp('background', 6)" onmouseenter="changeVersion('Decontamination')" onmouseleave="changeVersionBack('Decontamination')">
+            <img src="../assets/images/art-images/backgrounds/Stairs-1.jpg" alt="An illustration of a staircase leading down into a dark hallway." onclick="popUp('background', 7)">
+            <img src="../assets/images/art-images/backgrounds/Hallway-2.jpg" alt="An illustration of the end of a hallway. Newspapers cover up a window on one side." onclick="popUp('background', 8)">
+            <img src="../assets/images/art-images/backgrounds/Hallway-3.jpg" alt="An illustration of a sterile-looking hallway with a note on the floor (not readable)." onclick="popUp('background', 9)">
+            <img src="../assets/images/art-images/backgrounds/hallway-with-key.jpg" alt="An illustration of a hallway with a lantern attached to the wall and sand on the floor." onclick="popUp('background', 10)">
+            <img src="../assets/images/art-images/backgrounds/Kitchen.jpg" alt="An illustration of a dirty abandoned kitchen." onclick="popUp('background', 11)">
+            <img src="../assets/images/art-images/backgrounds/Lab-1.jpg" alt="An illustration of a tidy laboratory." onclick="popUp('background', 12)">
+            <img src="../assets/images/art-images/backgrounds/Lab-2.jpg" alt="An illustration of a messy overgrown laboratory" onclick="popUp('background', 13)">
+            <img src="../assets/images/art-images/backgrounds/Lab-stairwell.jpg" id="stairs" alt="An illustration of a stairwell with some heavy doors at the bottom slightly opened to reveal a pitch dark room." onclick="popUp('background', 14)" onmouseenter="changeVersion('Stairwell')" onmouseleave="changeVersionBack('Stairwell')">
+            <img src="../assets/images/art-images/backgrounds/Managers-office.jpg" alt="An illustration of an office with a dead man in a chair, with strange plants releasing spores around him." onclick="popUp('background', 15)">
+            <img src="../assets/images/art-images/backgrounds/Mirror-room.jpg" alt="An illustration of a room full of mirrors, a spiral staircase leading down through the floor and a note on the carpet (unreadable)." onclick="popUp('background', 16)">
+            <img src="../assets/images/art-images/backgrounds/Notice-board.jpg" alt="An illustration of a notice board with notes on it e.g. 'Who keeps making the weird salad? -Tom'" onclick="popUp('background', 17)">
+            <img src="../assets/images/art-images/backgrounds/Outside.jpg" alt="An illustration of the end of a slide leading out into a field with the words 'You escaped!!' above it." onclick="popUp('background', 18)">
+            <img src="../assets/images/art-images/backgrounds/phantasm-room.jpg" alt="An illustration of a playroom with a spiral staircase, a swing and a ball pit in it." onclick="popUp('background', 19)">
+            <img src="../assets/images/art-images/backgrounds/Storage-room.jpg" alt="An illustration of a storage room full of old furniture, some books, a roll of tape etc." onclick="popUp('background', 20)">
+            <img src="../assets/images/art-images/backgrounds/Title-page.jpg" alt="An illustration of a surreal playroom with two slides and the words 'I Made You a Happy World' in the middle." onclick="popUp('background', 21)">
         </div>
 
         <!-- Text Pop-Up -->
@@ -72,15 +72,60 @@
             <p id="backg-cleaning-room">
                 The decontamination / spray room scene in the game, <a href="https://github.com/Crwhite7479/106.2-WLG-Project" class="game-link">'Wilfred's Last Garden'</a> — a sci-fi horror game created by Cory White & GhostWithAPulse.
             </p>
+            <p id="backg-stairwell-1">
+                The first, deliberately spooky stairwell leading down into an abandoned lab in the game, <a href="https://github.com/Crwhite7479/106.2-WLG-Project" class="game-link">'Wilfred's Last Garden'</a> — a sci-fi horror game created by Cory White & GhostWithAPulse.
+            </p>
+            <p id="backg-hallway-2">
+                An empty hallway scene in the game, <a href="https://github.com/Crwhite7479/106.2-WLG-Project" class="game-link">'Wilfred's Last Garden'</a> — a sci-fi horror game created by Cory White & GhostWithAPulse.
+            </p>
+            <p id="backg-hallway-3">
+                A sterile-looking hallway scene in the game, <a href="https://github.com/JohnathanLancelot/I-Made-You-A-Happy-World" class="game-link">'I Made You a Happy World'</a> — a psychological fantasy game created by Ana Karpova, Tianze Xie & GhostWithAPulse.
+            </p>
+            <p id="backg-hallway-with-key">
+                Another hallway scene for the game, <a href="https://github.com/JohnathanLancelot/I-Made-You-A-Happy-World" class="game-link">'I Made You a Happy World'</a> — a psychological fantasy game created by Ana Karpova, Tianze Xie & GhostWithAPulse.
+            </p>
+            <p id="backg-kitchen">
+                A messy kitchen scene for the game, <a href="https://github.com/Crwhite7479/106.2-WLG-Project" class="game-link">'Wilfred's Last Garden'</a> — a sci-fi horror game created by Cory White & GhostWithAPulse.
+            </p>
+            <p id="backg-lab-1">
+                A tidy laboratory scene for the game, <a href="https://github.com/Crwhite7479/106.2-WLG-Project" class="game-link">'Wilfred's Last Garden'</a> — a sci-fi horror game created by Cory White & GhostWithAPulse.
+            </p>
+            <p id="backg-lab-2">
+                A messy, overgrown laboratory scene for the game, <a href="https://github.com/Crwhite7479/106.2-WLG-Project" class="game-link">'Wilfred's Last Garden'</a> — a sci-fi horror game created by Cory White & GhostWithAPulse.
+            </p>
+            <p id="backg-secret-stairwell">
+                A secret stairwell in the game, <a href="https://github.com/Crwhite7479/106.2-WLG-Project" class="game-link">'Wilfred's Last Garden'</a> — a sci-fi horror game created by Cory White & GhostWithAPulse.
+            </p>
+            <p id="backg-managers-office">
+                A spooky scene in the game, <a href="https://github.com/Crwhite7479/106.2-WLG-Project" class="game-link">'Wilfred's Last Garden'</a> — a sci-fi horror game created by Cory White & GhostWithAPulse.
+            </p>
+            <p id="backg-mirror-room">
+                A room full of mirrors in the game, <a href="https://github.com/JohnathanLancelot/I-Made-You-A-Happy-World" class="game-link">'I Made You a Happy World'</a> — a psychological fantasy game created by Ana Karpova, Tianze Xie & GhostWithAPulse.
+            </p>
+            <p id="backg-noticeboard">
+                A noticeboard in one of the labs in the game, <a href="https://github.com/Crwhite7479/106.2-WLG-Project" class="game-link">'Wilfred's Last Garden'</a> — a sci-fi horror game created by Cory White & GhostWithAPulse.
+            </p>
+            <p id="backg-escape">
+                The escape / win screen for the game, <a href="https://github.com/JohnathanLancelot/I-Made-You-A-Happy-World" class="game-link">'I Made You a Happy World'</a> — a psychological fantasy game created by Ana Karpova, Tianze Xie & GhostWithAPulse.
+            </p>
+            <p id="backg-ballpit">
+                Another playroom scene for the game, <a href="https://github.com/JohnathanLancelot/I-Made-You-A-Happy-World" class="game-link">'I Made You a Happy World'</a> — a psychological fantasy game created by Ana Karpova, Tianze Xie & GhostWithAPulse.
+            </p>
+            <p id="backg-storage">
+                A storage room scene for the game, <a href="https://github.com/Crwhite7479/106.2-WLG-Project" class="game-link">'Wilfred's Last Garden'</a> — a sci-fi horror game created by Cory White & GhostWithAPulse.
+            </p>
+            <p id="backg-IMYAHW">
+                The title screen for the game, <a href="https://github.com/JohnathanLancelot/I-Made-You-A-Happy-World" class="game-link">'I Made You a Happy World'</a> — a psychological fantasy game created by Ana Karpova, Tianze Xie & GhostWithAPulse.
+            </p>
         </div>
 
         <!-- X (Exit) Button -->
-        <img src="../assets/images/downloaded-icons/x-icon.png" alt="The 'X' exit button." class="exit-button" id="backg-exit-button" onclick="exitPopUp('backg')">
+        <img src="../assets/images/downloaded-icons/x-icon.png" alt="The 'X' exit button." class="exit-button" id="backg-exit-button" onclick="exitPopUp('background')">
 
         <!-- Footer -->
         <footer>
             <p>©2024 All rights reserved. Every illustration shown on this page was made by Nathan Ki aka ghost.with.a.pulse.</p>
-            <p>However, many backgrounds were made for indie games which are joint-owned collaborations. Hover over each image to view ownership details.</p>
+            <p>However, many backgrounds were made for indie games which are joint-owned collaborations. Click on each image to view ownership details.</p>
             <p>Instagram, Twitter & Telegram icons designed by <a href="www.freepik.com"><span class="freepik-link">Freepik</span></a> and used under a free licence.</p>
             <p>X button (for pop-ups) designed by <a href="https://www.freepik.com/author/pixelverse"><span class="freepik-link">@PixelVerse</span></a> and used under a free licence.</p>
             <div class="social-icons-box">
